--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-Mongose_URI = "mongodb://127.0.0.1:27017/Rural_women";
+Mongose_URI = "mongodb://127.0.0.1:27017/Rural_women"
 Secret = "heloiamsumitkumarahirwar6thsem"
